Prevent form elements from spilling out of their parent

--- a/sass/modules/_forms.scss
+++ b/sass/modules/_forms.scss
@@ -28,6 +28,8 @@ textarea {
 
     /* address margins set differently in Firefox4+, Safari5+ and Chrome */
     margin: 0;
+    /* prevent elements from spilling out of their parent */
+    max-width: 100%;
     font-family: $font-sans-serif;
     vertical-align: baseline;
 }
